Revise detection development guidelines to enhance project scope, compatibility, and security design. Update documentation to reflect new principles for native layer prioritization, syscall usage, and false positive control. Introduce new checks for application signature verification and improve logging practices for better debugging and collaboration. Ensure comprehensive coverage of detection logic across various Android versions and device manufacturers.